feat: Completed translations and added sidebar for filtering

--- a/client/src/i18n/locales/az/translation.json
+++ b/client/src/i18n/locales/az/translation.json
@@ -234,5 +234,79 @@
   "delete_account_groups": "Bütün qruplarınızdan çıxacaqsınız",
   "delete_account_recovery": "Hesab bərpa edilə bilməyəcək",
   "delete_account_profile_info": "Profil və şəxsi məlumatlarınız silinəcək",
-  "delete_account_no_recovery": "Hesab silindikdən sonra bərpa edilə bilməz"
+  "delete_account_no_recovery": "Hesab silindikdən sonra bərpa edilə bilməz",
+  "account.personalInfoTitle": "Şəxsi Məlumatlar",
+  "account.locationLabel": "Məkan",
+  "account.locationPlaceholder": "Məkanınızı axtarın və seçin",
+  "account.hobbiesLabel": "Hobbilər",
+  "account.saving": "Yadda saxlanılır...",
+  "account.saveChanges": "Dəyişiklikləri yadda saxla",
+  "account.searching": "Axtarılır...",
+  "account.hobby.Coffee": "Kofe",
+  "account.hobby.Travel": "Səyahət",
+  "account.hobby.Netflix": "Netflix",
+  "account.hobby.Coding": "Kodlaşdırma",
+  "account.hobby.Dogs": "İtlər",
+  "account.hobby.Cats": "Pişiklər",
+  "account.hobby.Music": "Musiqi",
+  "account.hobby.Reading": "Oxumaq",
+  "account.hobby.Fitness": "Fitnes",
+  "account.hobby.Cooking": "Aşpazlıq",
+  "account.hobby.Art": "İncəsənət",
+  "account.hobby.Photo": "Foto",
+  "account.hobby.Gaming": "Oyunlar",
+  "account.hobby.Hiking": "Yürüş",
+  "account.hobby.Swimming": "Üzgüçülük",
+  "account.hobby.Yoga": "Yoga",
+  "account.hobby.Theater": "Teatr",
+  "account.hobby.Food": "Qida",
+  "account.hobby.Sports": "İdman",
+  "account.hobby.Garden": "Bağçılıq",
+  "account.hobby.Guitar": "Gitara",
+  "account.hobby.Dancing": "Rəqs",
+  "account.hobby.Basketball": "Basketbol",
+  "account.hobby.Soccer": "Futbol",
+  "account.hobby.Darts": "Dart",
+  "account.hobby.Games": "Oyunlar",
+  "account.hobby.Wine": "Şərab",
+  "account.hobby.Beer": "Pivə",
+  "account.hobby.Beach": "Çimərlik",
+  "account.hobby.Winter": "Qış",
+  "account.hobby.Cars": "Avtomobillər",
+  "account.hobby.Comedy": "Komediya",
+  "account.hobby.Movies": "Filmlər",
+  "account.hobby.Tech": "Texnologiya",
+  "account.hobby.Nature": "Təbiət",
+  "account.hobby.Piano": "Piano",
+  "account.settingsTitle": "Hesab Ayarları",
+  "account.accountTypeTitle": "Hesab Növü",
+  "account.accountTypeEmail": "Email Hesabı",
+  "account.accountTypeGoogle": "Google Hesabı",
+  "account.accountTypeGithub": "GitHub Hesabı",
+  "account.accountTypeStandard": "Standart Hesab",
+  "account.verified": "Təsdiqləndi",
+  "account.unverified": "Təsdiqlənməyib",
+  "account.twoFactorTitle": "İki Mərhələli Doğrulama",
+  "account.twoFactorDesc": "Hesabınıza əlavə təhlükəsizlik qatını əlavə edin",
+  "account.enable2faBtn": "2FA Aktiv et",
+  "account.loginSessionsTitle": "Giriş Sessiyaları",
+  "account.loginSessionsDesc": "Aktiv giriş sessiyalarınızı idarə edin",
+  "account.viewSessionsBtn": "Sessiyalara bax",
+  "changePassword.title": "Şifrəni dəyiş",
+  "changePassword.notAvailable": "Şifrə mövcud deyil",
+  "changePassword.providerInfo": "Siz {provider} ilə qeydiyyatdan keçmisiniz. Şifrə dəyişiklikləri {provider} hesabınız vasitəsilə idarə olunur.",
+  "changePassword.manageOn": "{provider} üzərindən idarə et",
+  "changePassword.current": "Cari şifrə",
+  "changePassword.currentPlaceholder": "Cari şifrənizi daxil edin",
+  "changePassword.new": "Yeni şifrə",
+  "changePassword.newPlaceholder": "Yeni şifrənizi daxil edin",
+  "changePassword.confirm": "Yeni şifrəni təsdiqlə",
+  "changePassword.confirmPlaceholder": "Yeni şifrənizi təsdiqləyin",
+  "changePassword.requirements": "Şifrə tələblərinə uyğun olduğundan əmin olun",
+  "changePassword.allFieldsRequired": "Bütün şifrə sahələri tələb olunur",
+  "changePassword.notMatch": "Yeni şifrə və təsdiqi uyğun deyil",
+  "changePassword.success": "Şifrə uğurla dəyişdirildi!",
+  "changePassword.failed": "Şifrəni dəyişmək mümkün olmadı",
+  "changePassword.updating": "Şifrə yenilənir...",
+  "changePassword.update": "Şifrəni yenilə"
 }
