--- a/client/src/i18n/locales/en/translation.json
+++ b/client/src/i18n/locales/en/translation.json
@@ -205,5 +205,79 @@
   "message_privacy": "Message Privacy",
   "control_who_can_send_messages": "Control who can send you messages",
   "everyone": "Everyone",
-  "no_one": "No One"
+  "no_one": "No One",
+  "account.personalInfoTitle": "Personal Information",
+  "account.locationLabel": "Location",
+  "account.locationPlaceholder": "Search and select your location",
+  "account.hobbiesLabel": "Hobbies",
+  "account.saving": "Saving...",
+  "account.saveChanges": "Save Changes",
+  "account.searching": "Searching...",
+  "account.hobby.Coffee": "Coffee",
+  "account.hobby.Travel": "Travel",
+  "account.hobby.Netflix": "Netflix",
+  "account.hobby.Coding": "Coding",
+  "account.hobby.Dogs": "Dogs",
+  "account.hobby.Cats": "Cats",
+  "account.hobby.Music": "Music",
+  "account.hobby.Reading": "Reading",
+  "account.hobby.Fitness": "Fitness",
+  "account.hobby.Cooking": "Cooking",
+  "account.hobby.Art": "Art",
+  "account.hobby.Photo": "Photo",
+  "account.hobby.Gaming": "Gaming",
+  "account.hobby.Hiking": "Hiking",
+  "account.hobby.Swimming": "Swimming",
+  "account.hobby.Yoga": "Yoga",
+  "account.hobby.Theater": "Theater",
+  "account.hobby.Food": "Food",
+  "account.hobby.Sports": "Sports",
+  "account.hobby.Garden": "Garden",
+  "account.hobby.Guitar": "Guitar",
+  "account.hobby.Dancing": "Dancing",
+  "account.hobby.Basketball": "Basketball",
+  "account.hobby.Soccer": "Soccer",
+  "account.hobby.Darts": "Darts",
+  "account.hobby.Games": "Games",
+  "account.hobby.Wine": "Wine",
+  "account.hobby.Beer": "Beer",
+  "account.hobby.Beach": "Beach",
+  "account.hobby.Winter": "Winter",
+  "account.hobby.Cars": "Cars",
+  "account.hobby.Comedy": "Comedy",
+  "account.hobby.Movies": "Movies",
+  "account.hobby.Tech": "Tech",
+  "account.hobby.Nature": "Nature",
+  "account.hobby.Piano": "Piano",
+  "account.settingsTitle": "Account Settings",
+  "account.accountTypeTitle": "Account Type",
+  "account.accountTypeEmail": "Email Account",
+  "account.accountTypeGoogle": "Google Account",
+  "account.accountTypeGithub": "GitHub Account",
+  "account.accountTypeStandard": "Standard Account",
+  "account.verified": "Verified",
+  "account.unverified": "Unverified",
+  "account.twoFactorTitle": "Two-Factor Authentication",
+  "account.twoFactorDesc": "Add an extra layer of security to your account",
+  "account.enable2faBtn": "Enable 2FA",
+  "account.loginSessionsTitle": "Login Sessions",
+  "account.loginSessionsDesc": "Manage your active login sessions",
+  "account.viewSessionsBtn": "View Sessions",
+  "changePassword.title": "Change Password",
+  "changePassword.notAvailable": "Password Not Available",
+  "changePassword.providerInfo": "You signed up with {provider}. Password changes are managed through your {provider} account.",
+  "changePassword.manageOn": "Manage on {provider}",
+  "changePassword.current": "Current Password",
+  "changePassword.currentPlaceholder": "Enter your current password",
+  "changePassword.new": "New Password",
+  "changePassword.newPlaceholder": "Enter your new password",
+  "changePassword.confirm": "Confirm New Password",
+  "changePassword.confirmPlaceholder": "Confirm your new password",
+  "changePassword.requirements": "Please ensure your password meets all requirements",
+  "changePassword.allFieldsRequired": "All password fields are required",
+  "changePassword.notMatch": "New password and confirmation don't match",
+  "changePassword.success": "Password changed successfully!",
+  "changePassword.failed": "Failed to change password",
+  "changePassword.updating": "Updating Password...",
+  "changePassword.update": "Update Password"
 }
