--- a/client/src/i18n/locales/ru/translation.json
+++ b/client/src/i18n/locales/ru/translation.json
@@ -205,5 +205,65 @@
   "message_privacy": "Конфиденциальность сообщений",
   "control_who_can_send_messages": "Управляйте, кто может отправлять вам сообщения",
   "everyone": "Все",
-  "no_one": "Никто"
+  "no_one": "Никто",
+  "account.personalInfoTitle": "Личная информация",
+  "account.locationLabel": "Местоположение",
+  "account.locationPlaceholder": "Найдите и выберите своё местоположение",
+  "account.hobbiesLabel": "Хобби",
+  "account.saving": "Сохраняется...",
+  "account.saveChanges": "Сохранить изменения",
+  "account.searching": "Поиск...",
+  "account.hobby.Coffee": "Кофе",
+  "account.hobby.Travel": "Путешествия",
+  "account.hobby.Netflix": "Netflix",
+  "account.hobby.Coding": "Кодинг",
+  "account.hobby.Dogs": "Собаки",
+  "account.hobby.Cats": "Кошки",
+  "account.hobby.Music": "Музыка",
+  "account.hobby.Reading": "Чтение",
+  "account.hobby.Fitness": "Фитнес",
+  "account.hobby.Cooking": "Готовка",
+  "account.hobby.Art": "Искусство",
+  "account.hobby.Photo": "Фото",
+  "account.hobby.Gaming": "Игры",
+  "account.hobby.Hiking": "Походы",
+  "account.hobby.Swimming": "Плавание",
+  "account.hobby.Yoga": "Йога",
+  "account.hobby.Theater": "Театр",
+  "account.hobby.Food": "Еда",
+  "account.hobby.Sports": "Спорт",
+  "account.hobby.Garden": "Садоводство",
+  "account.hobby.Guitar": "Гитара",
+  "account.hobby.Dancing": "Танцы",
+  "account.hobby.Basketball": "Баскетбол",
+  "account.hobby.Soccer": "Футбол",
+  "account.hobby.Darts": "Дартс",
+  "account.hobby.Games": "Игры",
+  "account.hobby.Wine": "Вино",
+  "account.hobby.Beer": "Пиво",
+  "account.hobby.Beach": "Пляж",
+  "account.hobby.Winter": "Зима",
+  "account.hobby.Cars": "Машины",
+  "account.hobby.Comedy": "Комедия",
+  "account.hobby.Movies": "Фильмы",
+  "account.hobby.Tech": "Технологии",
+  "account.hobby.Nature": "Природа",
+  "account.hobby.Piano": "Пианино",
+  "changePassword.title": "Изменить пароль",
+  "changePassword.notAvailable": "Пароль недоступен",
+  "changePassword.providerInfo": "Вы зарегистрировались через {provider}. Изменение пароля осуществляется через ваш аккаунт {provider}.",
+  "changePassword.manageOn": "Управлять через {provider}",
+  "changePassword.current": "Текущий пароль",
+  "changePassword.currentPlaceholder": "Введите текущий пароль",
+  "changePassword.new": "Новый пароль",
+  "changePassword.newPlaceholder": "Введите новый пароль",
+  "changePassword.confirm": "Подтвердите новый пароль",
+  "changePassword.confirmPlaceholder": "Подтвердите новый пароль",
+  "changePassword.requirements": "Убедитесь, что ваш пароль соответствует всем требованиям",
+  "changePassword.allFieldsRequired": "Все поля пароля обязательны для заполнения",
+  "changePassword.notMatch": "Новый пароль и подтверждение не совпадают",
+  "changePassword.success": "Пароль успешно изменен!",
+  "changePassword.failed": "Не удалось изменить пароль",
+  "changePassword.updating": "Обновление пароля...",
+  "changePassword.update": "Обновить пароль"
 }
