--- a/client/src/i18n/locales/tr/translation.json
+++ b/client/src/i18n/locales/tr/translation.json
@@ -206,5 +206,80 @@
   "message_privacy": "Mesaj Gizliliği",
   "control_who_can_send_messages": "Kimlerin size mesaj gönderebileceğini seçin",
   "everyone": "Herkes",
-  "no_one": "Hiç kimse"
+  "no_one": "Hiç kimse",
+  "account.personalInfoTitle": "Kişisel Bilgiler",
+  "account.locationLabel": "Konum",
+  "account.locationPlaceholder": "Konumunuzu arayın ve seçin",
+  "account.hobbiesLabel": "Hobiler",
+  "account.saving": "Kaydediliyor...",
+  "account.saveChanges": "Değişiklikleri Kaydet",
+  "account.searching": "Aranıyor...",
+  "account.hobby.Coffee": "Kahve",
+  "account.hobby.Travel": "Seyahat",
+  "account.hobby.Netflix": "Netflix",
+  "account.hobby.Coding": "Kodlama",
+  "account.hobby.Dogs": "Köpekler",
+  "account.hobby.Cats": "Kediler",
+  "account.hobby.Music": "Müzik",
+  "account.hobby.Reading": "Okuma",
+  "account.hobby.Fitness": "Fitness",
+  "account.hobby.Cooking": "Yemek",
+  "account.hobby.Art": "Sanat",
+  "account.hobby.Photo": "Fotoğraf",
+  "account.hobby.Gaming": "Oyunlar",
+  "account.hobby.Hiking": "Yürüyüş",
+  "account.hobby.Swimming": "Yüzme",
+  "account.hobby.Yoga": "Yoga",
+  "account.hobby.Theater": "Tiyatro",
+  "account.hobby.Food": "Yemek",
+  "account.hobby.Sports": "Spor",
+  "account.hobby.Garden": "Bahçe",
+  "account.hobby.Guitar": "Gitar",
+  "account.hobby.Dancing": "Dans",
+  "account.hobby.Basketball": "Basketbol",
+  "account.hobby.Soccer": "Futbol",
+  "account.hobby.Darts": "Dart",
+  "account.hobby.Games": "Oyunlar",
+  "account.hobby.Wine": "Şarap",
+  "account.hobby.Beer": "Bira",
+  "account.hobby.Beach": "Plaj",
+  "account.hobby.Winter": "Kış",
+  "account.hobby.Cars": "Arabalar",
+  "account.hobby.Comedy": "Komedi",
+  "account.hobby.Movies": "Filmler",
+  "account.hobby.Tech": "Teknoloji",
+  "account.hobby.Nature": "Doğa",
+  "account.hobby.Piano": "Piyano",
+  "account.settingsTitle": "Hesap Ayarları",
+  "account.accountTypeTitle": "Hesap Türü",
+  "account.accountTypeEmail": "E-posta Hesabı",
+  "account.accountTypeGoogle": "Google Hesabı",
+  "account.accountTypeGithub": "GitHub Hesabı",
+  "account.accountTypeStandard": "Standart Hesap",
+  "account.verified": "Doğrulandı",
+  "account.unverified": "Doğrulanmadı",
+  "account.twoFactorTitle": "İki Aşamalı Doğrulama",
+  "account.twoFactorDesc": "Hesabınıza ekstra güvenlik katmanı ekleyin",
+  "account.enable2faBtn": "2FA'yı Etkinleştir",
+  "account.loginSessionsTitle": "Giriş Oturumları",
+  "account.loginSessionsDesc": "Aktif giriş oturumlarınızı yönetin",
+  "account.viewSessionsBtn": "Oturumları Görüntüle"
+  ,
+  "changePassword.title": "Şifreyi Değiştir",
+  "changePassword.notAvailable": "Şifre Kullanılamıyor",
+  "changePassword.providerInfo": "{provider} ile kaydoldunuz. Şifre değişiklikleri {provider} hesabınız üzerinden yönetilir.",
+  "changePassword.manageOn": "{provider} üzerinden yönet",
+  "changePassword.current": "Mevcut Şifre",
+  "changePassword.currentPlaceholder": "Mevcut şifrenizi girin",
+  "changePassword.new": "Yeni Şifre",
+  "changePassword.newPlaceholder": "Yeni şifrenizi girin",
+  "changePassword.confirm": "Yeni Şifreyi Onayla",
+  "changePassword.confirmPlaceholder": "Yeni şifrenizi onaylayın",
+  "changePassword.requirements": "Lütfen şifrenizin tüm gereksinimleri karşıladığından emin olun",
+  "changePassword.allFieldsRequired": "Tüm şifre alanları gereklidir",
+  "changePassword.notMatch": "Yeni şifre ve onay eşleşmiyor",
+  "changePassword.success": "Şifre başarıyla değiştirildi!",
+  "changePassword.failed": "Şifre değiştirilemedi",
+  "changePassword.updating": "Şifre güncelleniyor...",
+  "changePassword.update": "Şifreyi Güncelle"
 }
