refactor: improved filter sidebar UI with modern glassmorphism and enhanced tag styles

--- a/client/src/i18n/locales/az/translation.json
+++ b/client/src/i18n/locales/az/translation.json
@@ -333,5 +333,6 @@
   "feed_filter_select_countries": "Ölkələri seçin",
   "feed_filter_hobbies_placeholder": "Hobbiləri axtarın",
   "feed_filter_countries_placeholder": "Ölkələri axtarın",
-  "feed_filters_title": "Filtrlər"
+  "feed_filters_title": "Filtrlər",
+  "settings_language_en_full": "İngilis (ABŞ)"
 }
