--- a/client/src/i18n/locales/ru/translation.json
+++ b/client/src/i18n/locales/ru/translation.json
@@ -277,5 +277,34 @@
   "chat_status_offline": "Не в сети",
   "chat_no_content": "Нет контента",
   "chat_send": "Отправить",
-  "chat_user_unknown": "Неизвестный пользователь"
+  "chat_user_unknown": "Неизвестный пользователь",
+  "deletion_failed": "Не удалось удалить",
+  "save_changes": "Сохранить изменения",
+  "saving": "Сохраняется...",
+  "delete_account_confirm_button": "Да, удалить мой аккаунт",
+  "delete_account_cancel_button": "Отмена",
+  "account_deleted": "Аккаунт удалён",
+  "continue_to_login": "Продолжить к входу",
+  "logged_out": "Вы успешно вышли из системы",
+  "try_again": "Попробуйте снова",
+  "connection_request_sent": "Запрос на подключение отправлен",
+  "connection_request_accepted": "Запрос на подключение принят",
+  "connection_request_rejected": "Запрос на подключение отклонён",
+  "connection_request_already_sent": "Запрос на подключение уже отправлен",
+  "feed_filter_hobbies": "Хобби",
+  "feed_filter_countries": "Страны",
+  "feed_filter_clear": "Очистить фильтры",
+  "feed_filter_apply": "Применить фильтры",
+  "feed_filter_no_hobbies": "Хобби не выбраны",
+  "feed_filter_no_countries": "Страны не выбраны",
+  "feed_filter_select_hobbies": "Выберите хобби",
+  "feed_filter_select_countries": "Выберите страны",
+  "feed_filter_hobbies_placeholder": "Поиск хобби",
+  "feed_filter_countries_placeholder": "Поиск стран",
+  "feed_filters_title": "Фильтры",
+  "settings_language_en_full": "Английский (США)",
+  "filters": "Фильтры",
+  "hobies": "Хобби",
+  "clear_filters": "Очистить всё",
+  "apply_filters": "Применить фильтры"
 }
