--- a/client/src/i18n/locales/tr/translation.json
+++ b/client/src/i18n/locales/tr/translation.json
@@ -304,5 +304,23 @@
   "chat_status_offline": "Çevrimdışı",
   "chat_no_content": "İçerik yok",
   "chat_send": "Gönder",
-  "chat_user_unknown": "Bilinmeyen Kullanıcı"
+  "chat_user_unknown": "Bilinmeyen Kullanıcı",
+  "deletion_failed": "Silme başarısız oldu",
+  "save_changes": "Değişiklikleri Kaydet",
+  "saving": "Kaydediliyor...",
+  "delete_account_confirm_button": "Sil",
+  "delete_account_cancel_button": "İptal",
+  "account_deleted": "Hesap silindi",
+  "continue_to_login": "Devam etmek için giriş yap",
+  "logged_out": "Çıkış yapıldı",
+  "try_again": "Tekrar deneyin",
+  "connection_request_sent": "Bağlantı isteği gönderildi",
+  "connection_request_accepted": "Bağlantı isteği kabul edildi",
+  "connection_request_rejected": "Bağlantı isteği reddedildi",
+  "connection_request_already_sent": "Bağlantı isteği zaten gönderildi",
+  "feed_filters_title": "Filtreler",
+  "filters": "Filtreler",
+  "hobies": "Hobiler",
+  "clear_filters": "Filtreleri Temizle",
+  "apply_filters": "Filtreleri Uygula"
 }
