feat(i18n): added Russian and Turkish translations for account settings and delete account modal

--- a/client/src/i18n/locales/az/translation.json
+++ b/client/src/i18n/locales/az/translation.json
@@ -346,5 +346,65 @@
   "filters": "Filtrlər",
   "hobies": "Hobbilər",
   "clear_filters": "Hamısını təmizlə",
-  "apply_filters": "Filtrləri tətbiq et"
+  "apply_filters": "Filtrləri tətbiq et",
+  "loading": "Yüklənir...",
+  "online": "Onlayn",
+  "offline": "Oflayn",
+  "start_messaging": "Mesajlaşmaya başlamaq üçün söhbət və ya əlaqə seçin",
+  "welcome_to_chat": "Çat Dalğasına xoş gəlmisiniz",
+  "click_to_start": "Söhbətə başlamaq üçün klikləyin",
+  "add_connections_to_start_chatting": "Mesajlaşmağa başlamaq üçün əlaqələr əlavə edin",
+  "total_messages": "Cəmi Mesajlar",
+  "connections": "Bağlantılar",
+  "favorites": "Seçilmişlər",
+  "no_pending_requests": "Gözləyən bağlantı sorğusu yoxdur",
+  "sent_you_request": "Sizə bağlantı sorğusu göndərdi",
+  "my_connections": "Mənim Bağlantılarım",
+  "no_connections_yet": "Hələlik bağlantınız yoxdur",
+  "connected": "✓ Bağlandı",
+  "remove": "Sil",
+  "control_who_can_see_your_profile": "Profilinizi kimlərin görə biləcəyini idarə edin",
+  "control_who_can_send_you_messages": "Sizə kimlərin mesaj göndərə biləcəyini idarə edin",
+  "personal_info": "Şəxsi Məlumatlar",
+  "location": "Məkan",
+  "bio": "Bio",
+  "placeholder_first_name": "Adınızı daxil edin",
+  "placeholder_last_name": "Soyadınızı daxil edin",
+  "placeholder_email": "E-poçt ünvanınızı daxil edin",
+  "username_disabled": "İstifadəçi adı dəyişdirilə bilməz",
+  "placeholder_location": "Məkanınızı axtarın və seçin",
+  "placeholder_bio": "Haqqınızda məlumat verin...",
+  "characters": "simvol",
+  "min_hobbies_warning": "Zəhmət olmasa ən azı 3 hobbini seçin.",
+  "searching": "Axtarılır...",
+  "account_settings": {
+    "title": "Hesab Ayarları",
+    "account_type": "Hesab Növü",
+    "providers": {
+      "email": "Email Account",
+      "google": "Google Account",
+      "github": "GitHub Account",
+      "standard": "Standard Account"
+    },
+    "verified": "Doğrulanıb",
+    "unverified": "Doğrulanmayıb",
+    "two_factor": "Iki Mərhələli Doğrulama",
+    "two_factor_desc": "Ve ya hesabınıza əlavə təhlükəsizlik qatını əlavə edin",
+    "enable_2fa": "2FA Aktiv et",
+    "sessions": "Giriş Sessiyaları",
+    "sessions_desc": "Idarə edin və aktiv giriş sessiyalarınızı idarə edin",
+    "view_sessions": "Sessiyalara bax"
+  },
+  "change_password": "Şifrəni dəyiş",
+  "change_password_not_available": "Şifrə mövcud deyil",
+  "change_password_provider_info": "{provider} ilə qeydiyyatdan keçmisiniz. Şifrə dəyişiklikləri {provider} hesabınız vasitəsilə idarə olunur.",
+  "change_password_manage_on": "{provider} üzərindən idarə et",
+  "change_password_current": "Cari şifrə",
+  "change_password_current_placeholder": "Cari şifrənizi daxil edin",
+  "change_password_new": "Yeni şifrə",
+  "change_password_new_placeholder": "Yeni şifrənizi daxil edin",
+  "change_password_confirm": "Yeni şifrəni təsdiqləyin",
+  "change_password_confirm_placeholder": "Yeni şifrənizi təsdiqləyin",
+  "are_you_sure": "Əminsiniz?",
+  "this_action_cannot_be_undone": "Bu əməliyyat geri alınmaz"
 }
