--- a/client/src/i18n/locales/ru/translation.json
+++ b/client/src/i18n/locales/ru/translation.json
@@ -306,5 +306,53 @@
   "filters": "Фильтры",
   "hobies": "Хобби",
   "clear_filters": "Очистить всё",
-  "apply_filters": "Применить фильтры"
+  "apply_filters": "Применить фильтры",
+  "loading": "Загрузка...",
+  "online": "В сети",
+  "offline": "Не в сети",
+  "start_messaging": "Выберите чат или соединение, чтобы начать общение",
+  "welcome_to_chat": "Добро пожаловать в чат",
+  "click_to_start": "Нажмите, чтобы начать чат",
+  "add_connections_to_start_chatting": "Добавьте контакты, чтобы начать общение",
+  "control_who_can_see_your_profile": "Управляйте, кто может видеть ваш профиль",
+  "control_who_can_send_you_messages": "Управляйте, кто может отправлять вам сообщения",
+  "personal_info": "Личная информация",
+  "location": "Местоположение",
+  "bio": "Биография",
+  "placeholder_first_name": "Введите ваше имя",
+  "placeholder_last_name": "Введите вашу фамилию",
+  "placeholder_email": "Введите ваш email",
+  "username_disabled": "Имя пользователя нельзя изменить",
+  "placeholder_location": "Найдите и выберите ваше местоположение",
+  "placeholder_bio": "Расскажите о себе...",
+  "characters": "символов",
+  "min_hobbies_warning": "Пожалуйста, выберите минимум 3 хобби.",
+  "searching": "Поиск...",
+  "account_settings": {
+    "title": "Настройки аккаунта",
+    "account_type": "Тип аккаунта",
+    "providers": {
+      "email": "Email аккаунт",
+      "google": "Google аккаунт",
+      "github": "GitHub аккаунт",
+      "standard": "Стандартный аккаунт"
+    },
+    "verified": "Подтвержден",
+    "unverified": "Не подтвержден",
+    "two_factor": "Двухфакторная аутентификация",
+    "two_factor_desc": "Добавьте дополнительный уровень защиты вашему аккаунту",
+    "enable_2fa": "Включить 2FA",
+    "sessions": "Сессии входа",
+    "sessions_desc": "Управляйте активными сессиями входа",
+    "view_sessions": "Просмотреть сессии"
+  },
+  "delete_account": {
+    "title": "Удалить аккаунт",
+    "description": "Удаление вашего аккаунта приведет к потере всех данных и сообщений. Пожалуйста, подтвердите, что вы хотите продолжить.",
+    "confirm_text": "Я понимаю, что удаление аккаунта необратимо.",
+    "confirm_button": "Удалить мой аккаунт",
+    "cancel_button": "Отмена",
+    "success_message": "Ваш аккаунт успешно удален.",
+    "error_message": "Произошла ошибка при удалении вашего аккаунта. Пожалуйста, попробуйте еще раз."
+  }
 }
