--- a/client/src/i18n/locales/tr/translation.json
+++ b/client/src/i18n/locales/tr/translation.json
@@ -322,5 +322,64 @@
   "filters": "Filtreler",
   "hobies": "Hobiler",
   "clear_filters": "Filtreleri Temizle",
-  "apply_filters": "Filtreleri Uygula"
+  "apply_filters": "Filtreleri Uygula",
+  "loading": "Yükleniyor...",
+  "online": "Çevrimiçi",
+  "offline": "Çevrimdışı",
+  "start_messaging": "Mesajlaşmaya başlamak için bir sohbet veya bağlantı seçin",
+  "welcome_to_chat": "Sohbete Hoş Geldiniz",
+  "click_to_start": "Sohbet başlatmak için tıklayın",
+  "add_connections_to_start_chatting": "Sohbet etmeye başlamak için bağlantılar ekleyin",
+  "control_who_can_see_your_profile": "Profilinizi kimlerin görebileceğini kontrol edin",
+  "control_who_can_send_you_messages": "Size kimlerin mesaj gönderebileceğini kontrol edin",
+  "personal_info": "Kişisel Bilgiler",
+  "location": "Mekan",
+  "bio": "Bio",
+  "placeholder_first_name": "Adınızı daxil edin",
+  "placeholder_last_name": "Soyadınızı daxil edin",
+  "placeholder_email": "E-posta ünvanınızı daxil edin",
+  "username_disabled": "Kullanıcı adı değiştirilemez",
+  "placeholder_location": "Məkanınızı axtarın və seçin",
+  "placeholder_bio": "Haqqınızda bilgi verin...",
+  "characters": "Karakterler",
+  "min_hobbies_warning": "Zahmet olmasa en azı 3 hobbini seçiniz.",
+  "searching": "Aranıyor...",
+  "account_settings": {
+    "title": "Hesap Ayarları",
+    "account_type": "Hesap Türü",
+    "providers": {
+      "email": "E-posta Hesabı",
+      "google": "Google Hesabı",
+      "github": "GitHub Hesabı",
+      "standard": "Standart Hesap"
+    },
+    "verified": "Doğrulandı",
+    "unverified": "Doğrulanmadı",
+    "two_factor": "İki Faktörlü Kimlik Doğrulama",
+    "two_factor_desc": "Hesabınıza ekstra bir güvenlik katmanı ekleyin",
+    "enable_2fa": "2FA'yı Etkinleştir",
+    "sessions": "Giriş Oturumları",
+    "sessions_desc": "Aktif giriş oturumlarınızı yönetin",
+    "view_sessions": "Oturumları Görüntüle"
+  },
+  "change_password": {
+    "title": "Şifreyi Değiştir",
+    "not_available": "Şifre Kullanılamıyor",
+    "provider_info": "{provider} ile kaydoldunuz. Şifre değişiklikleri {provider} hesabınız üzerinden yönetilir.",
+    "manage_on": "{provider} üzerinden yönet",
+    "current": "Mevcut Şifre",
+    "current_placeholder": "Mevcut şifrenizi girin",
+    "new": "Yeni Şifre",
+    "new_placeholder": "Yeni şifrenizi girin",
+    "confirm": "Yeni Şifreyi Onayla",
+    "confirm_placeholder": "Yeni şifrenizi onaylayın",
+    "requirements": "Lütfen şifrenizin tüm gereksinimleri karşıladığından emin olun",
+    "all_fields_required": "Tüm şifre alanları gereklidir",
+    "not_match": "Yeni şifre ve onay eşleşmiyor",
+    "success": "Şifre başarıyla değiştirildi!",
+    "failed": "Şifre değiştirilemedi",
+    "updating": "Şifre güncelleniyor...",
+    "update": "Şifreyi Güncelle",
+    "cancel": "İptal"
+  }
 }
