--- a/client/src/i18n/locales/en/translation.json
+++ b/client/src/i18n/locales/en/translation.json
@@ -295,5 +295,65 @@
   "chat_user_unknown": "Unknown User",
   "feed_filters_title": "Filters",
   "clear_filters": "Clear Filters",
-  "apply_filters": "Apply Filters"
+  "apply_filters": "Apply Filters",
+  "loading": "Loading...",
+  "online": "Online",
+  "offline": "Offline",
+  "start_messaging": "Select a chat or connection to start messaging",
+  "welcome_to_chat": "Welcome to Chat",
+  "feed_filter_hobbies": "Hobbies",
+  "click_to_start": "Click to start chat",
+  "add_connections_to_start_chatting": "Add some connections to start chatting",
+  "control_who_can_see_your_profile": "Control who can see your profile",
+  "control_who_can_send_you_messages": "Control who can send you messages",
+  "personal_info": "Personal Information",
+  "location": "Location",
+  "bio": "Bio",
+  "placeholder_first_name": "Type your first name",
+  "placeholder_last_name": "Type your last name",
+  "placeholder_email": "Type your email",
+  "username_disabled": "Username cannot be changed",
+  "placeholder_location": "Type your location",
+  "placeholder_bio": "Type your bio",
+  "characters": "Characters",
+  "min_hobbies_warning": "Please select at least 3 hobbies.",
+  "searching": "Searching...",
+  "account_settings": {
+    "title": "Account Settings",
+    "account_type": "Account Type",
+    "providers": {
+      "email": "Email Account",
+      "google": "Google Account",
+      "github": "GitHub Account",
+      "standard": "Standard Account"
+    },
+    "verified": "Verified",
+    "unverified": "Unverified",
+    "two_factor": "Two-Factor Authentication",
+    "two_factor_desc": "Add an extra layer of security to your account",
+    "enable_2fa": "Enable 2FA",
+    "sessions": "Login Sessions",
+    "sessions_desc": "Manage your active login sessions",
+    "view_sessions": "View Sessions"
+  },
+  "change_password": {
+    "title": "Change Password",
+    "not_available": "Password Not Available",
+    "provider_info": "You signed up with {{provider}}. Password changes are managed through your {{provider}} account.",
+    "manage_on": "Manage on {{provider}}",
+    "current": "Current Password",
+    "current_placeholder": "Enter your current password",
+    "new": "New Password",
+    "new_placeholder": "Enter your new password",
+    "confirm": "Confirm New Password",
+    "confirm_placeholder": "Confirm your new password",
+    "requirements": "Please ensure your password meets all requirements",
+    "all_fields_required": "All password fields are required",
+    "not_match": "New password and confirmation don't match",
+    "success": "Password changed successfully!",
+    "failed": "Failed to change password",
+    "updating": "Updating Password...",
+    "update": "Update Password",
+    "cancel": "Cancel"
+  }
 }
